# uptime

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  build.rs  flake.nix  uptime.json
migrations/: 20230831173056_create_table.sql  20240203182019_create_series.sql
src/: client.rs  config.rs  db.rs  lib.rs  main.rs  web.rs
templates/: index.html
