[package]
name = "uptime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.27"
eyre = "0.6.8"
http = "0.2.9"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.1"
