[package]
name = "uptime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
askama = { version = "0.12.0", default-features = false }
axum = { version = "0.6.20", default-features = false, features = [
    "tokio",
    "http1",
    "http2",
    "tower-log",
    "tracing",
] }
chrono = "0.4.27"
eyre = "0.6.8"
http = "0.2.9"
reqwest = { version = "0.11.20", default-features = false, features = [
    "rustls-tls",
    "trust-dns",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", default-features = false, features = [
    "migrate",
    "sqlite",
    "macros",
    "chrono",
    "runtime-tokio",
] }
tokio = { version = "1.32.0", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2.4.1", features = ["serde"] }

[build-dependencies]
eyre = "0.6.8"
